add ball and pass function

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <body>
     <script src="background.js"></script>
     <script src="player.js"></script>
+    <script src="football.js"></script>
     <script src="wr.js"></script>
     <script src="defense.js"></script>
     <script src="game.js"></script>
